--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html>
     <head>
         <link
-            href="/marcel/ums/vendor/twbs/bootstrap/dist/css/bootstrap.min.css"
+            href="vendor/twbs/bootstrap/dist/css/bootstrap.min.css"
             rel="stylesheet">
         <link
             href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
             rel="stylesheet">
         <meta charset="UTF-8">
-        <title>Title of thsse document</title>
+        <title>Songs für euch!</title>
     </head>
 
     <body>
         <div id="mainContent"></div>
     </body>
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-    <script src="/marcel/ums/vendor/twbs/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/marcel/ums/ajaxHandler.js" type="text/javascript"></script>
-    <script src="/marcel/ums/javascript/index.js" type="text/javascript"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
+    <script src="vendor/twbs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="ajaxHandler.js" type="text/javascript"></script>
+    <script src="javascript/index.js" type="text/javascript"></script>
 </html>
